# realsense_dev

./: example.hpp
OpenVINO-OpenCV/: CMakeLists.txt  README.md  face_detection.cpp  image-classification.cpp
OpenVINO-OpenCV/caffemodel/: deploy.prototxt
capture/: CMakeLists.txt  caption.cpp  capture.cpp  readme.md
pointcloud/: CMakeLists.txt  rs-pointcloud.cpp
